--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Travel agency in Fort Myers specializing in cruise vacations, including small ships and river cruises, to destinations worldwide.">
     <meta name="author" content="Suzi Dollman">
+    <link rel="icon" href="img/favicon.ico">
 
     <title>All Seas Cruises & Travel - Fort Myers, FL</title>
 
