changed mobile quote font size, contact form ajax

--- a/index.html
+++ b/index.html
@@ -192,8 +192,7 @@
                     <p>Copyright <span style="font-family:'Alegreya'">&copy;</span> All Seas Cruises &amp; Travel 2014</p>
                 </div>
                 <div class="col-md-4">
-                    <i class="fa fa-anchor fa-2x" style="color:#767676"></i>
-                    <i class="fa fa-globe fa-2x" style="color:#4761C8"></i>
+                    <i class="fa fa-anchor fa-2x" style="color:#FFC1CA"></i>
                 </div>
                 <div class="col-md-4">
                     <p>Thanks for visiting!</p>
