--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script>
+        if (window.location.protocol != "https:")
+            window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
+    </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,19 +12,19 @@
     <meta name="author" content="Suzi Dollman">
     <link rel="icon" href="img/favicon.ico">
 
-    <title>All Seas Cruises & Travel - Fort Myers, FL</title>
+    <title>All Seas Cruises &amp; Travel - Fort Myers, FL</title>
 
     <!-- Bootstrap CSS -->
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="css/allseas.css"/>
+    <link rel="stylesheet" type="text/css" href="css/allseas.css">
 
     <!-- Custom Fonts -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Alegreya:400italic,400' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,400italic' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -166,30 +170,29 @@
         <div class="container-fluid">
           <div class="row contactboxes text-center">
                 <div class="col-sm-4" id="box-1">
-                    <h2><i class="fa fa-phone"></i></h2>
+                    <i class="fa fa-phone"></i>
                         <p>(239) 278-1208</p>
                 </div>
                 <div class="col-sm-4" id="box-2">
-                    <h1><i class="fa fa-home"></i></h1>
+                    <i class="fa fa-home"></i>
                         <p>13451 McGregor Blvd #11<br>
                         Fort Myers, FL 33919</p>
                 </div>
                 <div class="col-sm-4" id="box-3">
-                    <h2><i class="fa fa-envelope"></i></h2>
+                    <i class="fa fa-envelope"></i>
                         <p>sdollman@allseascruises.com</p>
                 </div>
             </div>
         </div>
-
-        <div id="map"></div>
-
     </section>
+
+    <section id="map"></section>
 
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <p>Copyright <span style="font-family:'Alegreya'">&copy;</span> All Seas Cruises &amp; Travel 2014</p>
+                    <p>Copyright <span style="font-family:'Lato'">&copy;</span> All Seas Cruises &amp; Travel 2015</p>
                 </div>
                 <div class="col-md-4">
                     <i class="fa fa-anchor fa-2x" style="color:#FFC1CA"></i>
@@ -202,12 +205,11 @@
     </footer>
 
     <!-- browse vacations modal -->
-    <div class="modal fade" id="BrowseModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="BrowseModal" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-            <h4 class="modal-title" id="myModalLabel" style="display:none">Click to change logo</h4>
           </div>
           <div class="modal-body">
             <div id="Luxury"><h2>Luxury Vacations</h2><a href="http://allseascruises.luxury.yourtrip.co/" class="btn btn-xl">Cruise or land</a></div>
@@ -215,9 +217,6 @@
             <div id="Europe"><h2>Europe</h2><a href="http://allseascruises.europe.yourtrip.co/" class="btn btn-xl">Cruises</a> <a href="http://allseascruises.europevacations.yourtrip.co/" class="btn btn-xl">Land vacations</a></div>
             <div id="Alaska"><h2>Alaska</h2><a href="http://allseascruises.alaska.yourtrip.co/" class="btn btn-xl">Cruises</a></div>
             <div id="Exotic"><h2>Exotic Destinations</h2><a href="http://allseascruises.exotic.yourtrip.co/" class="btn btn-xl">Cruise or land</a></div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
@@ -245,7 +244,7 @@
 </script>
 
 <!-- Maps js -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAec4dr47bLbSmPRN0la9L2Shf62afE7oY&sensor=false"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAec4dr47bLbSmPRN0la9L2Shf62afE7oY"></script>
 <script>
     function init(){var e=new google.maps.LatLng(26.546101,-81.913917);var t={zoom:13,center:e};var n=document.getElementById("map");var r=new google.maps.Map(n,t);var i=new google.maps.Marker({position:e,map:r})}google.maps.event.addDomListener(window,"load",init)
 </script>
