jpegtraned background image

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <!-- jQuery / Backstretch  -->
     <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="js/custom.backstretch.min.js"></script>
-    <script>$.backstretch("img/Balcony.jpg")</script>
+    <script>$.backstretch("img/balcony.jpg")</script>
 
     <!-- Bootstrap JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
