--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">Send Message</button>
+                                <button type="submit" class="btn btn-xl"><i class="fa fa-envelope-o"></i> Send Message</button>
                             </div>
                         </div>
                     </form>
@@ -217,6 +217,10 @@
       </div>
     </div>
 
+    <!-- loading icon (fontawesome) -->
+    <div id="loadingpin">
+        <div id="loading"><i class="fa fa-spinner fa-3x fa-spin"></i></div>
+    </div>
 
     <!-- jQuery / Backstretch  -->
     <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
@@ -251,6 +255,16 @@ $(document).ready(function(){
     })
 });
 </script>
+
+<!-- ajax loading icon -->
+    <script>
+        $(document).bind("ajaxSend", function(){
+          $("#resultinfo").html("");
+          $("#loadingpin, #loading").show();
+        }).bind("ajaxComplete", function(){
+          $("#loadingpin, #loading").hide();
+       });
+    </script>
 
 <script>
     $(document).ready(function(){
