prettified css, seperated min css

--- a/index.html
+++ b/index.html
@@ -6,19 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Travel agency in Fort Myers specializing in cruise vacations, including small ships and river cruises, to destinations worldwide.">
   <link rel="icon" href="img/favicon.ico">
-
   <title>All Seas Cruises &amp; Travel - Fort Myers, FL</title>
-
   <!-- Bootstrap CSS -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-
   <!-- Custom CSS -->
-  <link rel="stylesheet" type="text/css" href="css/allseas.css">
-
+  <link rel="stylesheet" type="text/css" href="css/allseas.min.css">
   <!-- Custom Fonts -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Oswald|Dancing+Script|Lato:400,400italic' rel='stylesheet' type='text/css'>
-
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
