--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <p>Copyright <span style="font-family:'Lato'">&copy;</span> All Seas Cruises &amp; Travel 2015</p>
+          <p>Copyright <span style="font-family:'Lato'">&copy;</span> All Seas Cruises &amp; Travel <span id="copy_year">2016</span></p>
         </div>
         <div class="col-md-4">
           <i class="fa fa-anchor fa-2x" style="color:#FFC1CA"></i>
@@ -215,8 +215,16 @@
     <div id="loading"><i class="fa fa-spinner fa-3x fa-spin"></i></div>
   </div>
 
-  <!-- jQuery / Backstretch  -->
+  <!-- jQuery  -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+  <!-- copyright year -->
+  <script>
+    var year = new Date().getFullYear();
+    var copyYear = $('#copy_year');
+    if (year != copyYear.text())
+      copyYear.text(year);
+  </script>
 
   <!-- Bootstrap JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
@@ -229,7 +237,7 @@
 
 <!-- Maps js -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAec4dr47bLbSmPRN0la9L2Shf62afE7oY"></script>
-<script>
+<script>  
   function init(){var e=new google.maps.LatLng(26.546101,-81.913917);var t={zoom:13,center:e};var n=document.getElementById("map");var r=new google.maps.Map(n,t);var i=new google.maps.Marker({position:e,map:r})}google.maps.event.addDomListener(window,"load",init)
 </script>
 
