on second thought, remove copyright date

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <p>Copyright <span style="font-family:'Lato'">&copy;</span> All Seas Cruises &amp; Travel <span id="copy_year">2016</span></p>
+          <p>Copyright <span style="font-family:'Lato'">&copy;</span> All Seas Cruises &amp; Travel</p>
         </div>
         <div class="col-md-4">
           <i class="fa fa-anchor fa-2x" style="color:#FFC1CA"></i>
@@ -217,14 +217,6 @@
 
   <!-- jQuery  -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
-  <!-- copyright year -->
-  <script>
-    var year = new Date().getFullYear();
-    var copyYear = $('#copy_year');
-    if (year != copyYear.text())
-      copyYear.text(year);
-  </script>
 
   <!-- Bootstrap JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
