remove copyright altogether

--- a/index.html
+++ b/index.html
@@ -179,13 +179,10 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
-          <p>Copyright <span style="font-family:'Lato'">&copy;</span> All Seas Cruises &amp; Travel</p>
-        </div>
-        <div class="col-md-4">
+        <div class="col-lg-12">
           <i class="fa fa-anchor fa-2x" style="color:#FFC1CA"></i>
         </div>
-        <div class="col-md-4">
+        <div class="col-lg-12">
           <p>Thanks for visiting!</p>
         </div>
       </div>
