--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
       </div>
       <div class="row introicons">
         <div class="col-md-4 text-center">
-        <i class="fa fa-briefcase fa-3x" style="color:#CA9648"></i>
+        <i class="fa fa-briefcase fa-3x" style="color:#C28C3B"></i>
         <h2>Professional</h2>
         <p>With over 20 years experience planning custom cruise and tour packages, we offer you professional service and exceptional values on your vacation.</p>
         </div>
         <div class="col-md-4 text-center">
-        <i class="fa fa-plane fa-3x" style="color:#73C786"></i>
+        <i class="fa fa-plane fa-3x" style="color:#41BE5E"></i>
         <h2>Full Vacation Planning</h2>
         <p>Our specialty is creating totally personalized cruise vacations. We will find the right fit for you, from airfare to ship to cabin to shore, and anything in between.</p>
         </div>
         <div class="col-md-4 text-center">
-        <i class="fa fa-comments-o fa-3x" style="color:#EA78AC"></i>
+        <i class="fa fa-comments-o fa-3x" style="color:#E55898"></i>
         <h2>Person to Person</h2>
         <p>We do everything we can to guarantee a smooth vacation experience without unfortunate surprises by involving clients at every step of planning.</p>
         </div>
@@ -135,7 +135,7 @@
                   <p class="help-block text-danger"></p>
                 </div>
                 <div class="form-group">
-                  <input type="tel" class="form-control" placeholder="Your Phone (Optional)" id="phone">
+                  <input type="tel" class="form-control" placeholder="Phone Number (Optional)" id="phone">
                   <p class="help-block text-danger"></p>
                 </div>
               </div>
@@ -157,18 +157,22 @@
     </div>
     <div class="container-fluid">
       <div class="row contactboxes text-center">
-        <div class="col-sm-4" id="box-1">
+        <div class="col-md-3" id="box-1">
           <i class="fa fa-phone"></i>
             <p>(239) 278-1208</p>
         </div>
-        <div class="col-sm-4" id="box-2">
+        <div class="col-md-3" id="box-2">
           <i class="fa fa-home"></i>
             <p>13451 McGregor Blvd #11<br>
             Fort Myers, FL 33919</p>
         </div>
-        <div class="col-sm-4" id="box-3">
+        <div class="col-md-3" id="box-3">
           <i class="fa fa-envelope"></i>
             <p>sdollman@allseascruises.com</p>
+        </div>
+        <div class="col-md-3" id="box-4">
+          <i class="fa fa-facebook"></i>
+            <p><a href="https://facebook.com/allseascruises">facebook.com/allseascruises</a></p>
         </div>
       </div>
     </div>
@@ -211,19 +215,12 @@
   <div id="loadingpin">
     <div id="loading"><i class="fa fa-spinner fa-3x fa-spin"></i></div>
   </div>
-
   <!-- jQuery  -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
   <!-- Bootstrap JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-
-  <!-- Plugin JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-
   <!-- slider / contact form -->
   <script src="js/scripts.min.js"></script>
-
 <!-- Maps js -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAec4dr47bLbSmPRN0la9L2Shf62afE7oY"></script>
 <script>  
