--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom CSS -->
-  <link rel="stylesheet" type="text/css" href="css/allseas-dkjfgs.min.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.min.css">
   <!-- Custom Fonts -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Oswald|Dancing+Script|Lato:400,400italic' rel='stylesheet' type='text/css'>
@@ -119,39 +119,7 @@
       </div>
       <div class="row">
         <div class="col-lg-12">
-          <form name="sentMessage" id="contactForm" novalidate>
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Subject *" id="subject" required data-validation-required-message="Please enter a subject.">
-                  <p class="help-block text-danger"></p>
-                </div>
-                <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
-                  <p class="help-block text-danger"></p>
-                </div>
-                <div class="form-group">
-                  <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
-                  <p class="help-block text-danger"></p>
-                </div>
-                <div class="form-group">
-                  <input type="tel" class="form-control" placeholder="Phone Number (Optional)" id="phone">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="clearfix"></div>
-              <div class="col-lg-12 text-center">
-                <div id="success"></div>
-                <button type="submit" class="btn btn-xl"><i class="fa fa-envelope-o"></i> Send Message</button>
-              </div>
-            </div>
-          </form>
+          <form id="static_contact_form"></form>
         </div>
       </div>
     </div>
@@ -211,10 +179,6 @@
     </div>
   </div>
 
-  <!-- loading icon (fontawesome) -->
-  <div id="loadingpin">
-    <div id="loading"><i class="fa fa-spinner fa-3x fa-spin"></i></div>
-  </div>
   <!-- jQuery  -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
@@ -223,8 +187,8 @@
   <!-- slider / contact form -->
   <script src="js/scripts.min.js"></script>
 <!-- Maps js -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAec4dr47bLbSmPRN0la9L2Shf62afE7oY"></script>
-<script>  
+<script src="https://maps.googleapis.com/maps/api/js?v=3"></script>
+<script>
   function init(){var e=new google.maps.LatLng(26.546101,-81.913917);var t={zoom:13,center:e};var n=document.getElementById("map");var r=new google.maps.Map(n,t);var i=new google.maps.Marker({position:e,map:r})}google.maps.event.addDomListener(window,"load",init)
 </script>
 
