--- a/404.html
+++ b/404.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <link rel="icon" href="img/favicon.ico">
-        <title>All Seas Cruises &amp; Travel - Fort Myers, FL</title>
-        <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.2/normalize.min.css">
-        <style>
-            body{background:url(img/balcony.jpg) center center no-repeat fixed;-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover;-webkit-backface-visibility:hidden}a{text-decoration:none;color:#BDA630;font-weight:700;transition:color 0.2s}a:hover{color:#F7DC51}article{position:fixed;top:0;left:0;right:0;bottom:0;padding:20%;background:rgba(0,0,0,.5)}article p{-webkit-animation-duration:1s;-moz-animation-duration:1s;-o-animation-duration:1s;animation-duration:1s;-webkit-animation-fill-mode:both;-moz-animation-fill-mode:both;-o-animation-fill-mode:both;animation-fill-mode:both;-webkit-animation-name:fadeInUp;-moz-animation-name:fadeInUp;-o-animation-name:fadeInUp;animation-name:fadeInUp;font-family:"Helvetica Neue",Arial,Helvetica,sans-serif;color:#fff;text-shadow:0 1px 1px #000;font-size:3em}article p span{font-size:.8em}@-webkit-keyframes fadeInUp{0%{opacity:0;-webkit-transform:translateY(20px)}100%{opacity:1;-webkit-transform:translateY(0)}}@-moz-keyframes fadeInUp{0%{opacity:0;-moz-transform:translateY(20px)}100%{opacity:1;-moz-transform:translateY(0)}}@-o-keyframes fadeInUp{0%{opacity:0;-o-transform:translateY(20px)}100%{opacity:1;-o-transform:translateY(0)}}@keyframes fadeInUp{0%{opacity:0;transform:translateY(20px)}100%{opacity:1;transform:translateY(0)}}@media(max-width:400px){p,pre{margin:.2em 0}article p{font-size:2.8em}article{padding:20% 0 0 10%}}
-        </style>
-        <!--[if lt IE 9]>
-            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <![endif]-->
-    </head>
-    <body>
-        <article>
-            <p><strong>404</strong><br/><span>Nothing Here!<br/><a href="/">Click here for the homepage</a></span></p>
-        </article>
-    </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>404 | All Seas Cruises &amp; Travel</title>
+  <link rel="shortcut icon" href="img/favicon.ico"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes" />
+  <style>*{box-sizing:border-box;margin:0}body,html{height:100%;width:100%}body{color:#fff;font-family:sans-serif;font-size:25px;text-align:center;overflow:hidden;background-size:cover!important}.container{height:100%;width:100%;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;padding-bottom:5%;-webkit-box-orient:vertical;-webkit-box-direction:normal;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center}h1{font-size:7em}.fade-in{-webkit-transition:-webkit-transform .8s,opacity .8s;transition:transform .8s,opacity .8s;opacity:1!important;-webkit-transform:none!important;-ms-transform:none!important;transform:none!important}a{color:#ffeb3b;text-decoration:none;font-weight:600}a:hover{text-decoration:underline}@media(max-width:400px){body{font-size:20px}}</style>
+</head>
+<body>
+  <div class="container" id="container">
+    <h1>404</h1>
+    <p>Page not found - <a href="/">Click here to return Home</a></p>
+  </div class="container">
+
+  <script>
+    var container = document.getElementById('container');
+    var imgTag = document.createElement('IMG');
+    var imgURL = 'https://images.unsplash.com/photo-1429808016056-f8a16278ebff?format=auto&auto=compress&dpr=1&crop=center&fit=crop&w=' + window.innerWidth + '&h=' + window.innerHeight + '&q=80';
+    container.style.cssText = 'opacity:0;-webkit-transform:translateY(5%);-ms-transform:translateY(5%);transform:translateY(5%)';
+    imgTag.onload = function() {
+      document.body.style.background = 'url(' + imgURL + ') center center no-repeat';
+      setTimeout(function() {
+        container.className += ' fade-in';
+      }, 200);
+    };
+    imgTag.src = imgURL;
+  </script>
+
+  <style>body{background-color: #95A4B7}</style>
+</body>
 </html>
