--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" type="text/css" href="css/styles.min.css">
   <!-- Custom Fonts -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href='https://fonts.googleapis.com/css?family=Oswald|Dancing+Script|Lato:400,400italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Oswald|Dancing+Script|Lato' rel='stylesheet' type='text/css'>
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -76,7 +76,7 @@
         <div class="col-md-4 text-center">
         <i class="fa fa-briefcase fa-3x" style="color:#C28C3B"></i>
         <h2>Professional</h2>
-        <p>With over 20 years experience planning custom cruise and tour packages, we offer you professional service and exceptional values on your vacation.</p>
+        <p>With over 20 years experience planning custom cruise and tour packages, we offer you professional service and exceptional values on your vacation at no extra cost.</p>
         </div>
         <div class="col-md-4 text-center">
         <i class="fa fa-plane fa-3x" style="color:#41BE5E"></i>
@@ -92,18 +92,54 @@
 
       <div class="row" style="margin-top:45px">
         <div class="col-lg-12">
-          <ul class="bxslider">
-            <li>
-            <blockquote>Suzi’s travel agency has been in business for over nineteen years, and I have had the pleasure of being her Holland America/Seabourn Sales Manager for eight. Suzi is very knowledgeable and up to date on all aspects of today's travel industry. Her agency is professional and reliable. Whether the vacation is a simply a short get-a-way or a meticulously planned cruise package, you will be assured to get the great service and prices you deserve with All Seas Cruises &amp; Travel.
-            <p style="text-align:right;margin-right:20px;">- Kyle Kleyn van de Poll, Holland America Line</p>
-            </blockquote>
-            </li>
-            <li>
-            <blockquote>I have been a Business Development Manager for Royal Caribbean Cruise Lines for over twenty-two years and I have known Suzi for almost as long. She is honest, knowledgeable, confident, and and goes the extra mile to get the job done. I have watched her in action talking with clients and she offers the highest level of professionalism. Your dream vacation is in good hands!
-            <p style="text-align:right;margin-right:20px;">- Debbie Meyers, Royal Caribbean</p>
-            </blockquote>
-            </li>
-          </ul>
+          <div class="cd-testimonials-wrapper cd-container">
+            <ul class="cd-testimonials">
+              <li>
+                <p>Suzi’s travel agency has been in business for over nineteen years, and I have had the pleasure of being her Holland America/Seabourn Sales Manager for eight. Suzi is very knowledgeable and up to date on all aspects of today's travel industry. Her agency is professional and reliable. Whether the vacation is a simply a short get-a-way or a meticulously planned cruise package, you will be assured to get the great service and prices you deserve with All Seas Cruises &amp; Travel.</p>
+                <div class="cd-author">
+                  <img src="/img/avatar1.jpg" alt="Author image">
+                  <ul class="cd-author-info">
+                    <li>Kyle Kleyn van de Poll</li>
+                    <li>Holland America Line</li>
+                  </ul>
+                </div>
+              </li>
+
+              <li>
+                <p>I have been a Business Development Manager for Royal Caribbean Cruise Lines for over twenty-two years and I have known Suzi for almost as long. She is honest, knowledgeable, confident, and and goes the extra mile to get the job done. I have watched her in action talking with clients and she offers the highest level of professionalism. Your dream vacation is in good hands!</p>
+                <div class="cd-author">
+                  <ul class="cd-author-info">
+                    <li>Debbie Meyers</li>
+                    <li>Royal Caribbean</li>
+                  </ul>
+                </div>
+              </li>
+
+              <li>
+                <p>Suzi has helped me with cruise reservations for over 12 years. Wouldn't think of using anyone else. I have recommended her to friends because I know they will be taken care of properly and just as if they are her only client at the time. You can go on the cruise knowing that everything has been taken care of. Suzi truly is the greatest!</p>
+                <div class="cd-author">
+                  <ul class="cd-author-info">
+                    <li>Donny</li>
+                    <li>Pine Island, FL</li>
+                  </ul>
+                </div>
+              </li>
+
+              <li>
+                <p>Suzi provides excellent, professional service from the first time you talk to her about selecting a trip. She is always helpful in suggesting alternative trips or cruise lines to consider and will work to find the best price that she can for you. Her excellent service continues through the booking process, selecting a cabin, tours and following up to ensure that final payments are made on time and that you have all the travel documents that you need for a particular trip. She has also helped us numerous times with booking changes as we approached our departure date. You can't go wrong calling her to plan a trip and we have referred her to our friends on numerous occasions.</p>
+                <div class="cd-author">
+                  <ul class="cd-author-info">
+                    <li>Bob</li>
+                    <li>Fort Myers, FL</li>
+                  </ul>
+                </div>
+              </li>
+              
+            </ul> <!-- cd-testimonials -->
+
+            <a target="_blank" href="http://vacation.com/travel-agents/usa/?name=Suzi-Dollman/18875" class="cd-see-all">See More</a>
+          </div> <!-- cd-testimonials-wrapper -->
+
         </div>
       </div>
 
@@ -140,7 +176,7 @@
         </div>
         <div class="col-md-3" id="box-4">
           <i class="fa fa-facebook"></i>
-            <p><a href="https://facebook.com/allseascruises">facebook.com/allseascruises</a></p>
+            <p><a target="_blank" href="//facebook.com/allseascruises">facebook.com/allseascruises</a></p>
         </div>
       </div>
     </div>
@@ -152,7 +188,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <i class="fa fa-anchor fa-2x" style="color:#FFC1CA"></i>
+          <i class="fa fa-anchor fa-2x" style="color:#ffe1e1"></i>
         </div>
         <div class="col-lg-12">
           <p>Thanks for visiting!</p>
@@ -189,7 +225,7 @@
 <!-- Maps js -->
 <script src="https://maps.googleapis.com/maps/api/js?v=3"></script>
 <script>
-  function init(){var e=new google.maps.LatLng(26.546101,-81.913917);var t={zoom:13,center:e};var n=document.getElementById("map");var r=new google.maps.Map(n,t);var i=new google.maps.Marker({position:e,map:r})}google.maps.event.addDomListener(window,"load",init)
+  function init(){var e=new google.maps.LatLng(26.546101,-81.913917);var t={zoom:12,center:e};var n=document.getElementById("map");var r=new google.maps.Map(n,t);var i=new google.maps.Marker({position:e,map:r})}google.maps.event.addDomListener(window,"load",init)
 </script>
 
 </body>
