fix contact form button icon issues

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom CSS -->
-  <link rel="stylesheet" type="text/css" href="css/styles93874.min.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.min.css">
   <!-- Custom Fonts -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Oswald|Dancing+Script|Lato' rel='stylesheet' type='text/css'>
@@ -134,7 +134,7 @@
                   </ul>
                 </div>
               </li>
-              
+
             </ul> <!-- cd-testimonials -->
 
             <a target="_blank" href="http://vacation.com/travel-agents/usa/?name=Suzi-Dollman/18875" class="cd-see-all">See More</a>
@@ -221,7 +221,7 @@
   <!-- Bootstrap JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
   <!-- slider / contact form -->
-  <script src="js/scripts39487.min.js"></script>
+  <script src="js/scripts.min.js"></script>
 <!-- Maps js -->
 <script src="https://maps.googleapis.com/maps/api/js?v=3"></script>
 <script>
