update email, rm browse locations

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="intro-text">
         <div class="intro-heading">Ready to get away?</div>
         <a href="#contact" class="page-scroll btn btn-xl">Contact Us</a>
-        <a href="#" id="browse_button" class="btn btn-xl" data-toggle="modal" data-target="#BrowseModal">Browse Vacations</a>
+        <!-- <a href="#" id="browse_button" class="btn btn-xl" data-toggle="modal" data-target="#BrowseModal">Browse Vacations</a> -->
       </div>
     </div>
   </header>
@@ -172,7 +172,7 @@
         </div>
         <div class="col-md-3" id="box-3">
           <i class="fa fa-envelope"></i>
-            <p>sdollman@allseascruises.com</p>
+            <p>info@allseascruises.com</p>
         </div>
         <div class="col-md-3" id="box-4">
           <i class="fa fa-facebook"></i>
